Added email functionality, so people can email me :fire:

--- a/public/reset.html
+++ b/public/reset.html
@@ -163,13 +163,14 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<!-- STICKY FOOTER -->
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div id="footerNavbar">
 			<div class="container text-center">
 				<a href="https://github.com/stuartschafer/Job-Tracker-2.0" target="_blank" >
-				<i class="fab fa-github-square navIcon"></i></a>
+					<i class="fab fa-github-square navIcon"></i>
+				</a>
 				
 				<i class="fas fa-envelope-square navIcon" data-toggle="modal" data-target="#emailModal"></i>
 				
