--- a/public/settings.html
+++ b/public/settings.html
@@ -263,7 +263,8 @@
 		<div id="footerNavbar">
 			<div class="container text-center">
 				<a href="https://github.com/stuartschafer/Job-Tracker-2.0" target="_blank" >
-				<i class="fab fa-github-square navIcon"></i></a>
+					<i class="fab fa-github-square navIcon"></i>
+				</a>
 
 				<i class="fas fa-envelope-square navIcon" data-toggle="modal" data-target="#emailModal"></i>
 				
