Changed up some minor styling and js notation :v:

--- a/public/jobs.html
+++ b/public/jobs.html
@@ -240,7 +240,7 @@
 					<i class="fab fa-github-square navIcon"></i>
 				</a>
 
-				<i class="fas fa-envelope-square navIcon" data-toggle="modal" data-target="#emailModal"></i>
+				<i class="fas fa-envelope-square navIcon" id="emailModal" data-toggle="modal" data-target="#emailModal"></i>
 				
 				<ul class="nav navbar-nav navbar-right">
 					<li><a class="navbarLinks" href="/settings">Settings</a></li>
