Minor styling changes :rabbit:

--- a/public/add.html
+++ b/public/add.html
@@ -64,7 +64,7 @@
 	<div class="addWrapper">
 		<!-- FORM TO ADD AN ITEM -->
 		<div class="container" id="newJobForm">
-			<h2 id="addHeader">Add A NEW JOB APPLICATION</h2>	
+			<h2 id="addHeader">ADD A NEW JOB APPLICATION</h2>	
 			<div class="row">
 				<div class="col-sm-10">
 					<form class="form-horizontal">
@@ -264,10 +264,14 @@
 		<div id="footerNavbar">
 			<div class="container text-center">
 				<a href="https://github.com/stuartschafer/Job-Tracker-2.0" target="_blank" >
-					<i class="fab fa-github-square navIcon"></i>
+					<i class="fab fa-github-square navIcon">
+						<span class="tooltiptext">More Info about the App</span>
+					</i>
 				</a>
 
-				<i class="fas fa-envelope-square navIcon" data-toggle="modal" data-target="#emailModal"></i>
+				<i class="fas fa-envelope-square navIcon" data-toggle="modal" data-target="#emailModal">
+					<span class="tooltiptext">Contact Me  <i class="fas fa-bullhorn"></i></span>
+				</i>
 				
 				<ul class="nav navbar-nav navbar-right">
 					<li><a class="navbarLinks" href="/settings">Settings</a></li>
