--- a/public/settings.html
+++ b/public/settings.html
@@ -86,7 +86,7 @@
 						<hr>
 						<!-- Overdue alert section-->
 						<div class="form-group">
-							<label for="overdueAlert" class="col-sm-3 col-sm-offset-4 control-label">Alert for Overdue Application</label>
+							<label for="overdueAlert" class="col-sm-4 col-sm-offset-3 control-label">Alert for Overdue Application</label>
 							<div class="col-sm-2">
 								<input type="number" class="form-control" id="overdueAlert" name="overdueAlert" min="1">
 							</div>
@@ -263,10 +263,14 @@
 		<div id="footerNavbar">
 			<div class="container text-center">
 				<a href="https://github.com/stuartschafer/Job-Tracker-2.0" target="_blank" >
-					<i class="fab fa-github-square navIcon"></i>
+					<i class="fab fa-github-square navIcon">
+						<span class="tooltiptext">More Info about the App</span>
+					</i>
 				</a>
 
-				<i class="fas fa-envelope-square navIcon" data-toggle="modal" data-target="#emailModal"></i>
+				<i class="fas fa-envelope-square navIcon" data-toggle="modal" data-target="#emailModal">
+					<span class="tooltiptext">Contact Me  <i class="fas fa-bullhorn"></i></span>
+				</i>
 				
 				<ul class="nav navbar-nav navbar-right">
 					<li><a class="navbarLinks" href="/settings">Settings</a></li>
