--- a/public/reset.html
+++ b/public/reset.html
@@ -169,10 +169,14 @@
 		<div id="footerNavbar">
 			<div class="container text-center">
 				<a href="https://github.com/stuartschafer/Job-Tracker-2.0" target="_blank" >
-					<i class="fab fa-github-square navIcon"></i>
+					<i class="fab fa-github-square navIcon">
+						<span class="tooltiptext">More Info about the App</span>
+					</i>
 				</a>
-				
-				<i class="fas fa-envelope-square navIcon" data-toggle="modal" data-target="#emailModal"></i>
+
+				<i class="fas fa-envelope-square navIcon" data-toggle="modal" data-target="#emailModal">
+					<span class="tooltiptext">Contact Me  <i class="fas fa-bullhorn"></i></span>
+				</i>
 				
 				<ul class="nav navbar-nav navbar-right">
 					<li><a class="navbarLinks" href="/settings">Settings</a></li>
