--- a/public/settings.html
+++ b/public/settings.html
@@ -268,7 +268,7 @@
 					</i>
 				</a>
 
-				<i class="fas fa-envelope-square navIcon" data-toggle="modal" data-target="#emailModal">
+				<i id="sendEmail" class="fas fa-envelope-square navIcon" data-toggle="modal" data-target="#emailModal">
 					<span class="tooltiptext">Contact Me  <i class="fas fa-bullhorn"></i></span>
 				</i>
 				
