--- a/public/jobs.html
+++ b/public/jobs.html
@@ -136,6 +136,7 @@
 							<option>Hiring Freeze</option>
 							<option>They Went in a Different Direction</option>
 							<option>Position Was Filled</option>
+							<option>No Longer Accepting Applications</option>
 						</select>
 					</div>
 			
@@ -242,7 +243,7 @@
 					</i>
 				</a>
 
-				<i class="fas fa-envelope-square navIcon" data-toggle="modal" data-target="#emailModal">
+				<i id="sendEmail" class="fas fa-envelope-square navIcon" data-toggle="modal" data-target="#emailModal">
 					<span class="tooltiptext">Contact Me  <i class="fas fa-bullhorn"></i></span>
 				</i>
 				
