--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@
 						<div class="form-group">
 							<label for="email" class="col-sm-3 control-label">Your Email</label>
 							<div class="col-sm-9">
-								<input type="text" name="email" class="form-control existinguser" id="userEmail" required>
+								<input type="text" name="email" class="form-control existinguser" id="enterUserEmail" required>
 							</div>
 						</div>
 						<div class="form-group">
