--- a/public/jobs.html
+++ b/public/jobs.html
@@ -236,6 +236,9 @@
 	<!-- STICKY FOOTER -->
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div id="footerNavbar">
+			<ul class="nav navbar-nav navbar-left">
+				<div id="copyright">&copy Copyright 2018 Stuart Schafer</div>
+			</ul>
 			<div class="container text-center">
 				<a href="https://github.com/stuartschafer/Job-Tracker-2.0" target="_blank" >
 					<i class="fab fa-github-square navIcon">
