Added a copyright in the bottom navbar :red_car:

--- a/public/menu.html
+++ b/public/menu.html
@@ -63,6 +63,9 @@
 			<div class="row justify-content-md-center">
 				<button id="emailMe" type="button" class="btn btn-info btn-lg btn-block center-block buttonStuff"data-toggle="modal" data-target="#emailModal"><i class="fas fa-smile"></i> Comments / Concerns  <i class="fas fa-frown"></i></button>
 			</div>
+			<div class="row text-center">
+				<div id="copyright">&copy Copyright 2018 Stuart Schafer</div>
+			</div>
 		</div>
 		
 
