Added extra options for employer response :bank:

--- a/public/jobs.html
+++ b/public/jobs.html
@@ -124,10 +124,12 @@
 							<option></option>
 							<option>Requested Interview</option>
 							<option>Phone Interview</option>
+							<option>In-Person Interview</option>
 							<option>Will Contact Me</option>
 							<option>Positive Comments</option>
 							<option>Made an Offer for Employment</option>
 							<option>Made it Through Next Round</option>
+							<option>Other</option>
 						</select>
 						<select class="form-control" id="responseBadOptions">
 							<option></option>
@@ -135,8 +137,10 @@
 							<option>Position was Closed</option>
 							<option>Hiring Freeze</option>
 							<option>They Went in a Different Direction</option>
+							<option>Didn't Meet Desired Salary</option>
 							<option>Position Was Filled</option>
 							<option>No Longer Accepting Applications</option>
+							<option>Other</option>
 						</select>
 					</div>
 			
