Added option of Moving Forward for status :statue_of_liberty:

--- a/public/edit.html
+++ b/public/edit.html
@@ -191,6 +191,11 @@
 							<div class="form-check form-check-inline" id="interestLevel">
 									&nbsp
 								<label class="form-check-label">
+									<input class="form-check-input" type="radio" name="statusRadios" id="status_MovingForward" value="Moving Forward">
+									<span id="activeInactiveLabel">Moving Forward</span>
+								</label>
+
+								<label class="form-check-label">
 									<input class="form-check-input" type="radio" name="statusRadios" id="status_Active" value="Active">
 									<span id="activeInactiveLabel">Active</span>
 								</label>
