--- a/public/jobs.html
+++ b/public/jobs.html
@@ -148,6 +148,10 @@
 			
 					<div class="form-check">
 						<label class="form-check-label active_inactive">
+							<input class="form-check-input" type="radio" name="statusRadio" id="applicationStatus" value="Moving Forward">
+							Mark application as <span id="statusActiveLabel">MOVING FORWARD</span>
+						</label>
+						<label class="form-check-label active_inactive">
 							<input class="form-check-input" type="radio" name="statusRadio" id="applicationStatus" value="Active">
 							Mark application as <span id="statusActiveLabel">ACTIVE</span>
 						</label>
