Added my LinkedIn page link to the copyright :steam_locomotive:

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,11 @@
 				<button id="emailMe" type="button" class="btn btn-info btn-lg btn-block center-block mainButtons" data-toggle="modal" data-target="#emailModal"><i class="fas fa-smile"></i> Comments / Concerns  <i class="fas fa-frown"></i></button>
 			</div>
 			<div class="row text-center">
-				<div id="copyright">&copy Copyright 2018 Stuart Schafer</div>
+				<div id="copyright">
+					<a href="https://www.linkedin.com/in/stuart-schafer/" target="_blank">
+						&copy Copyright 2018 Stuart Schafer
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
