--- a/public/jobs.html
+++ b/public/jobs.html
@@ -245,7 +245,11 @@
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div id="footerNavbar">
 			<ul class="nav navbar-nav navbar-left">
-				<div id="copyright">&copy Copyright 2018 Stuart Schafer</div>
+				<div id="copyright">
+					<a href="https://www.linkedin.com/in/stuart-schafer/" target="_blank">
+						&copy Copyright 2018 Stuart Schafer
+					</a>
+				</div>
 			</ul>
 			<div class="container text-center">
 				<a href="https://github.com/stuartschafer/Job-Tracker-2.0" target="_blank" >
