--- a/public/reset.html
+++ b/public/reset.html
@@ -168,7 +168,11 @@
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div id="footerNavbar">
 			<ul class="nav navbar-nav navbar-left">
-				<div id="copyright">&copy Copyright 2018 Stuart Schafer</div>
+				<div id="copyright">
+					<a href="https://www.linkedin.com/in/stuart-schafer/" target="_blank">
+						&copy Copyright 2018 Stuart Schafer
+					</a>
+				</div>
 			</ul>
 			<div class="container text-center">
 				<a href="https://github.com/stuartschafer/Job-Tracker-2.0" target="_blank" >
@@ -177,7 +181,7 @@
 					</i>
 				</a>
 
-				<i class="fas fa-envelope-square navIcon" data-toggle="modal" data-target="#emailModal">
+				<i id="sendEmail" class="fas fa-envelope-square navIcon" data-toggle="modal" data-target="#emailModal">
 					<span class="tooltiptext">Contact Me  <i class="fas fa-bullhorn"></i></span>
 				</i>
 				
