Some minor styling chnages :fuelpump:

--- a/public/add.html
+++ b/public/add.html
@@ -264,13 +264,13 @@
 		<div id="footerNavbar">
 			<ul class="nav navbar-nav navbar-left">
 				<div id="copyright">
-					<a href="https://www.linkedin.com/in/stuart-schafer/" target="_blank">
+					<a id="copyrightWords" href="https://www.linkedin.com/in/stuart-schafer/" target="_blank">
 						&copy Copyright 2018 Stuart Schafer
 					</a>
 				</div>
 			</ul>
 			<div class="container text-center">
-				<a href="https://github.com/stuartschafer/Job-Tracker-2.0" target="_blank" >
+				<a href="https://github.com/stuartschafer/Job-Tracker-2.0#readme" target="_blank" >
 					<i class="fab fa-github-square navIcon">
 						<span class="tooltiptext">More Info about the App</span>
 					</i>
