--- a/public/index.html
+++ b/public/index.html
@@ -46,17 +46,20 @@
 		<!-- Buttons -->
 		<div class="container">
 			<div class="row justify-content-md-center">
-				<button id="logintoacct" type="button" class="btn btn-warning btn-lg btn-block center-block mainButtons" data-toggle="modal" data-target="#signupModal">Sign Up  <i class="fa fa-user-plus"></i></button>
+				<button id="logintoacct" type="button" class="btn btn-warning btn-lg btn-block center-block mainButtons" data-toggle="modal" data-target="#signupModal">Sign Up &nbsp;&nbsp;&nbsp;<i class="fa fa-user-plus"></i></button>
 			</div>
 			<div class="row justify-content-md-center">
-				<button id="signintoacct" type="button" class="btn btn-success btn-lg btn-block center-block mainButtons" data-toggle="modal" data-target="#signinModal">Sign In  <i class="fas fa-unlock-alt"></i></button>
+				<button id="signintoacct" type="button" class="btn btn-success btn-lg btn-block center-block mainButtons" data-toggle="modal" data-target="#signinModal">Sign In &nbsp;&nbsp;&nbsp;<i class="fas fa-unlock-alt"></i></button>
 			</div>
 			<div class="row justify-content-md-center">
-				<button id="emailMe" type="button" class="btn btn-info btn-lg btn-block center-block mainButtons" data-toggle="modal" data-target="#emailModal"><i class="fas fa-smile"></i> Comments / Concerns  <i class="fas fa-frown"></i></button>
+				<button id="emailMe" type="button" class="btn btn-info btn-lg btn-block center-block mainButtons" data-toggle="modal" data-target="#emailModal"><i class="fas fa-smile"></i>&nbsp;&nbsp; Comments / Concerns &nbsp;&nbsp;<i class="fas fa-frown"></i></button>
+			</div>
+			<div class="row justify-content-md-center">
+				<a id="readMe" href="https://github.com/stuartschafer/Job-Tracker-2.0#readme" target="_blank" class="btn btn-lg btn-link btn-block center-block buttonStuff"><i class="fas fa-info-circle"></i> More Info about this application</a>
 			</div>
 			<div class="row text-center">
 				<div id="copyright">
-					<a href="https://www.linkedin.com/in/stuart-schafer/" target="_blank">
+					<a id="copyrightWords" href="https://www.linkedin.com/in/stuart-schafer/" target="_blank">
 						&copy Copyright 2018 Stuart Schafer
 					</a>
 				</div>
