--- a/public/menu.html
+++ b/public/menu.html
@@ -49,23 +49,26 @@
 		<!-- Button section -->
 		<div class="container">
 			<div class="row justify-content-md-center">
-				<button id="jobButton" type="button" class="btn btn-success btn-lg btn-block center-block buttonStuff">View Applications <i class="fa fa-thumbs-up"></i></button>
+				<button id="jobButton" type="button" class="btn btn-success btn-lg btn-block center-block buttonStuff">View Applications &nbsp;&nbsp;&nbsp;<i class="fa fa-thumbs-up"></i></button>
 			</div>
 			<div class="row justify-content-md-center">
-				<button id="addButton" type="button" class="btn btn-warning btn-lg btn-block center-block buttonStuff">Add New Job <i class="fas fa-clipboard-check"></i></button>
+				<button id="addButton" type="button" class="btn btn-warning btn-lg btn-block center-block buttonStuff">Add New Job &nbsp;&nbsp;&nbsp;<i class="fas fa-clipboard-check"></i></button>
 			</div>
 			<div class="row justify-content-md-center">
-				<button id="settingsButton" type="button" class="btn btn-primary btn-lg btn-block center-block buttonStuff">Settings <i class="fas fa-cogs"></i></button>
+				<button id="settingsButton" type="button" class="btn btn-primary btn-lg btn-block center-block buttonStuff">Settings &nbsp;&nbsp;&nbsp;<i class="fas fa-cogs"></i></button>
 			</div>
 			<div class="row justify-content-md-center">
-				<button id="logoutButton" type="button" class="btn btn-dark btn-lg btn-block center-block buttonStuff">Log Out <i class="fas fa-external-link-alt"></i></button>
+				<button id="logoutButton" type="button" class="btn btn-dark btn-lg btn-block center-block buttonStuff">Log Out &nbsp;&nbsp;&nbsp;<i class="fas fa-external-link-alt"></i></button>
 			</div>
 			<div class="row justify-content-md-center">
-				<button id="emailMe" type="button" class="btn btn-info btn-lg btn-block center-block buttonStuff"data-toggle="modal" data-target="#emailModal"><i class="fas fa-smile"></i> Comments / Concerns  <i class="fas fa-frown"></i></button>
+				<button id="emailMe" type="button" class="btn btn-info btn-lg btn-block center-block buttonStuff" data-toggle="modal" data-target="#emailModal"><i class="fas fa-smile"></i>&nbsp;&nbsp; Comments / Concerns  &nbsp;&nbsp;<i class="fas fa-frown"></i></button>
+			</div>
+			<div class="row justify-content-md-center">
+				<a id="readMe" href="https://github.com/stuartschafer/Job-Tracker-2.0#readme" target="_blank" class="btn btn-lg btn-link btn-block center-block buttonStuff"><i class="fas fa-info-circle"></i> More Info about this application</a>
 			</div>
 			<div class="row text-center">
 				<div id="copyright">
-					<a href="https://www.linkedin.com/in/stuart-schafer/" target="_blank">
+					<a id="copyrightWords" href="https://www.linkedin.com/in/stuart-schafer/" target="_blank">
 						&copy Copyright 2018 Stuart Schafer
 					</a>
 				</div>
