:japanese_castle: Minor style changes

--- a/public/jobs.html
+++ b/public/jobs.html
@@ -252,7 +252,7 @@
 				</div>
 			</ul>
 			<div class="container text-center">
-				<a href="https://github.com/stuartschafer/Job-Tracker-2.0#readme" target="_blank">
+				<a href="https://github.com/stuartschafer/Job-Tracker-2.0#top" target="_blank">
 					<i class="fab fa-github-square navIcon">
 						<span class="tooltiptext">More Info about the App</span>
 					</i>
