--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 				<button id="emailMe" type="button" class="btn btn-info btn-lg btn-block center-block mainButtons" data-toggle="modal" data-target="#emailModal"><i class="fas fa-smile"></i>&nbsp;&nbsp; Comments / Concerns &nbsp;&nbsp;<i class="fas fa-frown"></i></button>
 			</div>
 			<div class="row justify-content-md-center">
-				<a id="readMe" href="https://github.com/stuartschafer/Job-Tracker-2.0#readme" target="_blank" class="btn btn-lg btn-link btn-block center-block buttonStuff"><i class="fas fa-info-circle"></i> More Info about this application</a>
+				<a id="readMe" href="https://github.com/stuartschafer/Job-Tracker-2.0#top" target="_blank" class="btn btn-lg btn-link btn-block center-block buttonStuff"><i class="fas fa-info-circle"></i> More Info about this application</a>
 			</div>
 			<div class="row text-center">
 				<div id="copyright">
